# agent-closeout-bench

./: .gitignore  ANNOTATION_REPORT.md  CITATION.cff  CLAIM_LEDGER.md  COLLABORATION_PRIVACY.md  DATASET_CARD.md  HOOK_ITERATION_LOG.md  LIMITATIONS.md  PHYSICS_ENGINE_SPEC.md  README.md  RELEASE_CHECKLIST.md  REPRODUCE.md  RULE_PACK_SCHEMA.md  SECURITY.md  SOTA_2026_RESEARCH_LEDGER.md  SOURCE_LEDGER.md  SPEC.md  STATUS.md  leaderboard.md  metadata_croissant_draft.json  pyproject.toml  quota_manifest.json
annotations/: .gitignore  README.md  blind_annotation_sheet.csv  compute_agreement.py  compute_judge_agreement.py  export_blind_sheet.py  judge_prompt.md  judge_schema.json  run_judges.py  sample_uai_2026.jsonl  sample_uai_2026.py  validate_judge_output.py
apart-global-south/: REGISTRATION_LOG.md  idea-note.md
apart-sps/: REGISTRATION_LOG.md  idea-note.md
baselines/: run_baselines.py
engine/: Cargo.toml
evaluation/: RESULTS.md  RESULTS_partial.md  __init__.py  eval_hooks.py  metrics.py
generation/: assemble_candidate_corpus.py  generate_corpus_parallel.py  recover_from_claude_transcripts.py
hf_dataset/: README.md
manifests/: LICENSE_MANIFEST.json  PROVENANCE_MANIFEST.json  REDACTION_MANIFEST.json  candidate_corpus_manifest.json  real_session_sources.json  redaction_manifest.md  release_evidence_manifest.json
paper/: SPEC-paper-uai-2026.md  outline.md  readiness_audit_2026-05-13.md
public_data_intake/: README.md  derived_fixture_manifest.jsonl  source_registry.json
recovery/: RECOVERY_MANIFEST.md  legacy_draft_SPEC_untrusted.md
results/: README.md  (+13 more)
(+197 files in other folders)
