[project]
name = "agent-closeout-bench"
version = "0.1.0"
description = "Benchmark and hook evaluation harness for agentic coding assistant closeout dark patterns."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "jsonschema>=4", "PyYAML>=6"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
